# Sl-Rtos

./: CMakeLists.txt  README.md
arch/arm/arm-v7m/: CMakeLists.txt
arch/arm/arm-v7m/corterx-m7/armcc/: sl_port.h  sl_port_c.c  sl_port_s.s
arch/arm/arm-v7m/corterx-m7/gcc/: sl_port.h  sl_port_c.c  sl_port_s.s
arch/arm/arm-v7m/corterxm-common/armcc/: sl_port_c.c
arch/arm/arm-v7m/corterxm-common/gcc/: port.h  port_c.c  port_s.s
board/NUCLEO_STM32F746ZG/: CMakeLists.txt  board.c
board/NUCLEO_STM32F746ZG/include/: board.h  sys.h
board/NUCLEO_STM32F746ZG/src/: app.c  sys.c
cmake/: gcc_stm32f7.cmake
demo/mutex/: CMakeLists.txt  mutex.c
demo/proc_delay/: CMakeLists.txt  proc_delay.c
demo/proc_manager/: CMakeLists.txt  proc_manager.c
demo/sched_lock/: CMakeLists.txt  sched_lock.c
kernel/: CMakeLists.txt
kernel/core/: kos_block.c  kos_mutex.c  kos_proc.c  kos_sched.c  kos_syc.c  kos_tick.c
kernel/core/include/: kos_block.h  kos_compiler.h  kos_config.h  kos_list.h  kos_mutex.h  kos_proc.h  kos_sched.h  kos_sys.h  kos_tick.h
kernel/cpu/: kos_cpu.c
kernel/cpu/include/: kos_cpu.h
kernel/fallaway/: sl_ready_queue.c  sl_ready_queue.h
platform/st/CMSIS/Device/ST/STM32F7xx/Source/Templates/arm/: startup_stm32f745xx.s  startup_stm32f756xx.s  startup_stm32f765xx.s  startup_stm32f767xx.s  startup_stm32f769xx.s  startup_stm32f777xx.s  startup_stm32f779xx.s
platform/st/CMSIS/Device/ST/STM32F7xx/Source/Templates/gcc/: startup_stm32f745xx.s  startup_stm32f756xx.s  startup_stm32f765xx.s  startup_stm32f767xx.s  startup_stm32f769xx.s  startup_stm32f777xx.s  startup_stm32f779xx.s
platform/st/CMSIS/Device/ST/STM32F7xx/Source/Templates/iar/: startup_stm32f745xx.s  startup_stm32f746xx.s  startup_stm32f756xx.s  startup_stm32f765xx.s  startup_stm32f767xx.s  startup_stm32f769xx.s  startup_stm32f777xx.s  startup_stm32f779xx.s
platform/st/STM32F7xx_HAL_Driver/Inc/: stm32f7xx_hal_conf_template.h
platform/st/STM32F7xx_HAL_Driver/Src/: stm32f7xx_hal_msp_template.c  stm32f7xx_hal_timebase_rtc_alarm_template.c  stm32f7xx_hal_timebase_rtc_wakeup_template.c  stm32f7xx_hal_timebase_tim_template.c
